--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <p id="demo">we have to change this color</p>
-
-        <script>
-            function myFunction() {
-                document.getElementById("demo").style.fontSize="40px"
-            }
-        </script>
-
-        <script>
-
-        </script>
+  <body>
+    <p id="demo"></p>
+    <script>
+    
+     document.getElementById("demo").innerHTML=5 * 10;
+    
+    </script>
+  </body>
+</html>
